replace bootstrap refs with bootstrap3 cdn

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <title>What Should We Play?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
+  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato:400,700,700italic'>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <script type="text/javascript" src="./js/jquery.min.1.10.2.js"></script>
-  <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+  <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/app.js" defer='defer'></script>
   <script type="text/javascript" src="./js/jquerymobile.js"></script>
   <script type="text/javascript" src="js/jquery.shake.js"></script>
