--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato:400,700,700italic'>
   <link rel="stylesheet" type="text/css" href="css/app.css">
-  <script type="text/javascript" src="./js/jquery.min.1.10.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/app.js" defer='defer'></script>
   <script type="text/javascript" src="./js/jquerymobile.js"></script>
   <script type="text/javascript" src="js/jquery.shake.js"></script>
+  <script type="text/javascript" src="js/app.js" defer='defer'></script>
 </head>
 
 <body>
