--- a/index.html
+++ b/index.html
@@ -4,47 +4,52 @@
 <head>
   <title>What Should We Play?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
+  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato:400,700,700italic'>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./js/jquerymobile.js"></script>
+  <!--<script type="text/javascript" src="./js/jquerymobile.js"></script>-->
   <script type="text/javascript" src="js/jquery.shake.js"></script>
-  <script type="text/javascript" src="js/app.js" defer='defer'></script>
+  <script type="text/javascript" src="js/Select.js"></script>
+  <script type="text/javascript" src="js/App.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
   <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span6 offset3">
+
+    <div class="row text-center" id='title'>
+      <div class="col-md-6 col-md-offset-3">
         <h1>What Should We Play?</h1>
-        <form class="form-horizontal">
-          <div class="selectDiv">
-            <select id='styleselect'>
-              <option value='no-op'>Choose A Style</option>
+
+      </div>
+    </div>
+
+    <div class="row text-center" id='body'>
+      <div class="col-md-4 col-md-offset-4">
+        <form role="form">
+          <div class="form-group">
+            <select id='styleselect' class="form-control">
+              <option>Choose A Style</option>
             </select>
-          </div>
-          <div class="selectDiv">
-            - and / or -
-          </div>
-          <div class="selectDiv">
-            <select id='meterselect'>
+            <div class="selectDiv">
+              - and / or -
+            </div>
+            <select id='meterselect' class="form-control">
               <option value='no-op'>Choose A Meter</option>
             </select>
-          </div>
-          <div class="selectDiv">
-            - and / or -
-          </div>
-          <div class="selectDiv">
-            <select id='songselect'>
+            <div class="selectDiv" class="form-control">
+              - and / or -
+            </div>
+            <select id='songselect' class="form-control">
               <option value='no-op'>Choose A Song</option>
             </select>
           </div>
-          <a class="btn btn-warning btn-large" data-role='button' href='javascript:submit_action();'>Count It Off</a>
-          <br>
-          <small><i>NEW! Shake your iOS device to Count it off!</i></small>
+
+          <button type="submit" class="btn btn-lg btn-warning">Submit</button>
         </form>
+
       </div>
     </div>
     <div class="row-fluid">
