--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <div class="row text-center" id='title'>
       <div class="col-md-6 col-md-offset-3">
         <h1>What Should We Play?</h1>
-
       </div>
     </div>
 
@@ -47,7 +46,7 @@
             </select>
           </div>
 
-          <button type="submit" class="btn btn-lg btn-warning">Submit</button>
+          <button type="submit" class="btn btn-lg btn-warning">Count It Off!</button>
         </form>
 
       </div>
